--- a/to_css/token_token.css
+++ b/to_css/token_token.css
@@ -4,7 +4,8 @@
 /*********************/
 body {
 	font-family: "Century Gothic", "Gill Sans", Arial, sans-serif;
-	font-size: 92.5%;
+/*	font-size: 92.5%;*/
+	font-size: 12px;
 	margin: 0;
 	padding: 0;
 /*	background-color: #FFFFFF; */
@@ -161,7 +162,8 @@ display: block;
 	/*padding: 70px 70px 70px 70px; */
 }
 #ladoA #field01 {
-	padding: 1.6em;
+	padding-top: 1.6em;
+	padding-bottom: 1.6em;
 	border-width:6px;
 	font-size:1.6em;
   	border-color: #F00;
@@ -170,7 +172,8 @@ display: block;
     border-radius:8px;
 }
 #ladoA #field02 {
-	padding: 1.6em;
+	padding-top: 1.6em;
+	padding-bottom: 1.6em;
 	border-width:6px;
 	font-size:1.6em;
   	border-color: blue;
@@ -179,13 +182,17 @@ display: block;
     border-radius:8px;
 }
 #ladoA #field03 {
-	padding: 1.6em;
+	padding-top: 1.6em;
+	padding-bottom: 1.6em;
 	border-width:6px;
 	font-size:1.6em;
   	border-color: green;
   	border-style: solid;
   	max-width:80%;
     border-radius:8px;
+}
+#ladoA #optclasse2, #optclasse{
+	font-size: 0.6em;
 }
 #tabletokens {
 	font-family: Arial, Helvetica, sans-serif;
@@ -209,9 +216,12 @@ display: block;
   background-color: #04AA6D;
   color: white;
 }
-
+#ladoA #tokenxx {
+	font-size: 0.6em;
+}
 #optindice,#optindice2,#optindice3 {
 	background-color: yellow;
+	font-size: 0.6em;
 }
 /*
 #ladoA th,td {
