--- a/to_css/token_token.css
+++ b/to_css/token_token.css
@@ -78,7 +78,7 @@ h1 {
         line-height: 100%;
 }
 h2 {
-        color: #F4BE04;
+        color: #73AFB7;	/*        #F4BE04;*/
         font-size: 1.6em;
         margin-top: 10px;
         overflow: hidden;
@@ -100,6 +100,14 @@ p {
 }
 img.floatRight {
         border: 0; /* 2px solid #000000; */
+}
+
+img.floatcenter {
+	padding-top: 1.6em;
+	padding-bottom: 1.6em;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /**********************/
